--- a/googlecodein2.html
+++ b/googlecodein2.html
@@ -27,3 +27,26 @@
 	<img class="align" src="Spa_Flower.png">
 	<img class="balign" src="Spa_Flower2.png" width="50" height="50">
 	<p><center>Here you can find the best fantasy books you can imagine!</center></p>
+	<h2>About</h2>
+	<h3>Genres</h3>
+	<ol type="1">
+		<li>Fantasy</li>
+		<li>Mystery</li>
+		<li>Realistic Fiction</li>
+		<li>Sci-Fi</li>
+		<li>Romance</li>
+		<li>Comedy</li>
+		<li>Drama</li>
+		<li>Other...</li>
+	</ol>
+	<h3>Books Turned movies and Vice Versa</h3>
+	<ol type="1">
+		<li>Harry Potter</li>
+		<li>The Mortal Instruments</li>
+		<li>Divergent</li>
+		<li>The Hunger Games</li>
+		<li>Percy Jackson</li>
+		<li>Other...</li>
+	</ol>
+</body>
+</html>
