--- a/googlecodein2.html
+++ b/googlecodein2.html
@@ -40,7 +40,7 @@
 		<li>Drama</li>
 		<li>Other...</li>
 	</ol>
-	<h3>Books Turned movies and Vice Versa</h3>
+	<h3>Books Turned Movies and Vice Versa</h3>
 	<ol type="1">
 		<li>Harry Potter</li>
 		<li>The Mortal Instruments</li>
