--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<img class="align" src="Spa_Flower.png">
 	<img class="balign" src="Spa_Flower2.png" width="50" height="50">
 	<p><center>Here you can find the best fantasy books you can imagine!</center></p>
-	<center>Find out more <a href="googlecodein2.html">here</a>!</center>
+	<center>Find out more <a href="googlecodein2.html">here</a> or <a href="googlecodein3">here</a>!</center>
 	<br>
 	<table>
 		<tr>
