Update and rename googlecodein3 to googlecodein3.html

--- a/googlecodein3.html
+++ b/googlecodein3.html
@@ -36,5 +36,15 @@
     <img class="align" src="Spa_Flower.png">
     <img class="balign" src="Spa_Flower2.png" width="50" height="50">
     <p><center>Here you can find the best fantasy books you can imagine!</center></p>
+    <h2>The Book Or The Movie?</h2>
+    <h3>Books Turned Movies and Vice Versa</h3>
+	<ol type="1">
+		<li>Harry Potter</li>
+		<li>The Mortal Instruments</li>
+		<li>Divergent</li>
+		<li>The Hunger Games</li>
+		<li>Percy Jackson</li>
+		<li>Other...</li>
+	</ol>
 </body>
 </html>
